@@ -11,15 +11,15 @@ void main() throws Exception {
     urlBuilder.append("&" + URLEncoder.encode("pageNo", "UTF-8") + "=" + URLEncoder.encode("1", "UTF-8"));
     urlBuilder.append("&" + URLEncoder.encode("DPSL_MTD_CD", "UTF-8") + "=" + URLEncoder.encode("0001", "UTF-8"));
     urlBuilder.append("&" + URLEncoder.encode("CTGR_HIRK_ID", "UTF-8") + "=" + URLEncoder.encode("10000", "UTF-8"));
-    urlBuilder.append("&" + URLEncoder.encode("CTGR_HIRK_ID_MID", "UTF-8") + "=" + URLEncoder.encode("10100", "UTF-8"));
-    urlBuilder.append("&" + URLEncoder.encode("GOODS_PRICE_FROM", "UTF-8") + "=" + URLEncoder.encode("522740000", "UTF-8"));
-    urlBuilder.append("&" + URLEncoder.encode("GOODS_PRICE_TO", "UTF-8") + "=" + URLEncoder.encode("617393000", "UTF-8"));
-    urlBuilder.append("&" + URLEncoder.encode("OPEN_PRICE_FROM", "UTF-8") + "=" + URLEncoder.encode("522740000", "UTF-8"));
-    urlBuilder.append("&" + URLEncoder.encode("OPEN_PRICE_TO", "UTF-8") + "=" + URLEncoder.encode("617393000", "UTF-8"));
+    urlBuilder.append("&" + URLEncoder.encode("CTGR_HIRK_ID_MID", "UTF-8") + "=" + URLEncoder.encode("10200", "UTF-8"));
+    urlBuilder.append("&" + URLEncoder.encode("GOODS_PRICE_FROM", "UTF-8") + "=" + URLEncoder.encode("", "UTF-8"));
+    urlBuilder.append("&" + URLEncoder.encode("GOODS_PRICE_TO", "UTF-8") + "=" + URLEncoder.encode("", "UTF-8"));
+    urlBuilder.append("&" + URLEncoder.encode("OPEN_PRICE_FROM", "UTF-8") + "=" + URLEncoder.encode("", "UTF-8"));
+    urlBuilder.append("&" + URLEncoder.encode("OPEN_PRICE_TO", "UTF-8") + "=" + URLEncoder.encode("", "UTF-8"));
     urlBuilder.append("&" + URLEncoder.encode("CLTR_NM", "UTF-8") + "=" + URLEncoder.encode("", "UTF-8"));
     urlBuilder.append("&" + URLEncoder.encode("CLTR_MNMT_NO", "UTF-8") + "=" + URLEncoder.encode("", "UTF-8"));
-    urlBuilder.append("&" + URLEncoder.encode("PBCT_BEGN_DTM", "UTF-8") + "=" + URLEncoder.encode("20220101", "UTF-8"));
-    urlBuilder.append("&" + URLEncoder.encode("PBCT_CLS_DTM", "UTF-8") + "=" + URLEncoder.encode("20221231", "UTF-8"));
+    urlBuilder.append("&" + URLEncoder.encode("PBCT_BEGN_DTM", "UTF-8") + "=" + URLEncoder.encode("20250101", "UTF-8"));
+    urlBuilder.append("&" + URLEncoder.encode("PBCT_CLS_DTM", "UTF-8") + "=" + URLEncoder.encode("20251231", "UTF-8"));
     urlBuilder.append("&" + URLEncoder.encode("SIDO", "UTF-8") + "=" + URLEncoder.encode("", "UTF-8"));
     urlBuilder.append("&" + URLEncoder.encode("SGK", "UTF-8") + "=" + URLEncoder.encode("", "UTF-8"));
     urlBuilder.append("&" + URLEncoder.encode("EMD", "UTF-8") + "=" + URLEncoder.encode("", "UTF-8"));
@@ -44,4 +44,7 @@ void main() throws Exception {
     conn.disconnect();
 
     System.out.println(sb.toString());
+
+    //  실행코드
+//  java --enable-preview --source 21 OnbidApi.java
 }
